--- a/_sass/property.sass
+++ b/_sass/property.sass
@@ -20,7 +20,7 @@
   align-items: center
   display: flex
   font-size: 0.7rem
-  justify-content: flex-end
+  justify-content: flex-start
   opacity: 0.5
   transition-duration: $speed
   transition-property: opacity
