--- a/assets/css/website.css
+++ b/assets/css/website.css
@@ -1864,7 +1864,7 @@ label.light input {
     color: rgba(0, 0, 0, 0.7);
     display: inline-block;
     padding: 0.1em 0.5em 0.15em;
-    vertical-align: top
+    vertical-align: top;
 }
 
 .example-value {
