--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -35,7 +35,7 @@ document.addEventListener('DOMContentLoaded', function() {
   {% if page.template != "index" %}
     <nav id="menu-nav" class="menu-nav">
       <div class="menu-search">
-        <input id="menu-search-input" type="search" autocomplete="off" placeholder="Search for a property">
+        <input id="menu-search-input" type="search" autocomplete="off" placeholder="Cari FAQ">
         <i class="icon is-search"></i>
       </div>
       <div id="menu-list" class="menu-list">
@@ -62,15 +62,6 @@ document.addEventListener('DOMContentLoaded', function() {
     <strong>{{site.subtitle}}</strong> <small>Created by <a href="https://jgthms.com">@jgthms</a></small>
   </p>
   <p class="footer-share footer-share--social">
-    <strong class="footer-share-label">Share</strong>
-    {% include social/button-twitter.html %}
-    {% include social/button-facebook.html %}
-    <a id="menu-nav-open" class="footer-share-nav">Menu</a>
+        <a id="menu-nav-open" class="footer-share-nav">Menu</a>
   </p>
-  <!-- <p class="footer-share footer-share--contribute">
-    <strong class="footer-share-label">Contribute</strong>
-    <a class="footer-share-button is-github" href="https://github.com/jgthms/css-reference" target="_blank">
-      {% include svg/github.html %}
-    </a>
-  </p> -->
 </footer>
