--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>{{page.property_name}} - {{site.title}}</title>
+    <title>{{tag.title}} - {{site.title}}</title>
     <meta name="description" content="Learn how {{page.property_name}} works in CSS.">
     <link rel="stylesheet" type="text/css" href="{{site.url}}/assets/css/website.css?v={{ site.time | date: "%Y%m%d%H%M" }}">
 
